feat: add scrap
Signed-off-by: AlasDiablo <25723276+AlasDiablo@users.noreply.github.com>