@@ -3,7 +3,6 @@ package fr.alasdiablo.janoeo.foundation.data.model;
 import fr.alasdiablo.diolib.data.provider.DioBlockStateProvider;
 import net.minecraft.data.DataGenerator;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static fr.alasdiablo.janoeo.foundation.Registries.*;
@@ -15,7 +14,7 @@ public class FoundationBlockStateProvider extends DioBlockStateProvider {
 
     @Override
     protected void registerStates() {
-        List<String> cubeAllList = Arrays.asList(
+        List<String> cubeAllList = List.of(
                 BAUXITE_ORE, LEAD_ORE, NICKEL_ORE, SILVER_ORE, TIN_ORE, URANIUM_ORE, DEEPSLATE_BAUXITE_ORE, DEEPSLATE_LEAD_ORE, DEEPSLATE_NICKEL_ORE,
                 DEEPSLATE_SILVER_ORE, DEEPSLATE_TIN_ORE, DEEPSLATE_URANIUM_ORE, TINY_COAL_ORE, TINY_COPPER_ORE, TINY_DIAMOND_ORE, TINY_EMERALD_ORE,
                 TINY_GOLD_ORE, TINY_IRON_ORE, TINY_LAPIS_ORE, TINY_REDSTONE_ORE, DEEPSLATE_TINY_COAL_ORE, DEEPSLATE_TINY_COPPER_ORE, DEEPSLATE_TINY_DIAMOND_ORE,
