@@ -5,7 +5,6 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraftforge.client.model.generators.ItemModelProvider;
 import net.minecraftforge.common.data.ExistingFileHelper;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static fr.alasdiablo.janoeo.foundation.Registries.*;
@@ -20,29 +19,33 @@ public class FoundationItemModelProvider extends ItemModelProvider {
 
     @Override
     protected void registerModels() {
-        List<String> dusts = Arrays.asList(
+        List<String> dusts = List.of(
                 ALUMINIUM_DUST, AMETHYST_DUST, COAL_DUST, COPPER_DUST, DIAMOND_DUST, EMERALD_DUST, GOLD_DUST, IRON_DUST, LAPIS_DUST, LEAD_DUST, NICKEL_DUST,
                 SILVER_DUST, TIN_DUST, URANIUM_DUST
         );
 
         this.registerDustItem(dusts);
 
-        List<String> nuggets = Arrays.asList(
+        List<String> nuggets = List.of(
                 ALUMINIUM_NUGGET, COAL_NUGGET, COPPER_NUGGET, DIAMOND_NUGGET, EMERALD_NUGGET, LAPIS_NUGGET, LEAD_NUGGET, NICKEL_NUGGET, REDSTONE_NUGGET,
                 SILVER_NUGGET, TIN_NUGGET, URANIUM_NUGGET
         );
 
         this.registerNuggetItem(nuggets);
 
-        List<String> ingots = Arrays.asList(ALUMINIUM_INGOT, LEAD_INGOT, NICKEL_INGOT, SILVER_INGOT, TIN_INGOT, URANIUM_INGOT);
+        List<String> ingots = List.of(ALUMINIUM_INGOT, LEAD_INGOT, NICKEL_INGOT, SILVER_INGOT, TIN_INGOT, URANIUM_INGOT);
 
         this.registerIngotItem(ingots);
 
-        List<String> raws = Arrays.asList(RAW_ALUMINIUM, RAW_LEAD, RAW_NICKEL, RAW_SILVER, RAW_TIN, RAW_URANIUM);
+        List<String> raws = List.of(RAW_ALUMINIUM, RAW_LEAD, RAW_NICKEL, RAW_SILVER, RAW_TIN, RAW_URANIUM);
 
         this.registerRawItem(raws);
 
-        List<String> blocks = Arrays.asList(
+        List<String> others = List.of(SCRAP);
+
+        this.registerOtherItem(others);
+
+        List<String> blocks = List.of(
                 BAUXITE_ORE, LEAD_ORE, NICKEL_ORE, SILVER_ORE, TIN_ORE, URANIUM_ORE, DEEPSLATE_BAUXITE_ORE, DEEPSLATE_LEAD_ORE, DEEPSLATE_NICKEL_ORE,
                 DEEPSLATE_SILVER_ORE, DEEPSLATE_TIN_ORE, DEEPSLATE_URANIUM_ORE, TINY_COAL_ORE, TINY_COPPER_ORE, TINY_DIAMOND_ORE, TINY_EMERALD_ORE,
                 TINY_GOLD_ORE, TINY_IRON_ORE, TINY_LAPIS_ORE, TINY_REDSTONE_ORE, DEEPSLATE_TINY_COAL_ORE, DEEPSLATE_TINY_COPPER_ORE, DEEPSLATE_TINY_DIAMOND_ORE,
@@ -70,6 +73,10 @@ public class FoundationItemModelProvider extends ItemModelProvider {
 
     private void registerRawItem(List<String> raws) {
         raws.forEach(raw -> withExistingParent(raw, GENERATED).texture("layer0", new ResourceLocation(MOD_ID, "item/raw/" + raw)));
+    }
+
+    private void registerOtherItem(List<String> others) {
+        others.forEach(other -> withExistingParent(other, GENERATED).texture("layer0", new ResourceLocation(MOD_ID, "item/" + other)));
     }
 
     private void registerBlock(List<String> blocks) {
